tests/NormalTests/paczka1/fuzzy1/50225546.err
Error in line 2: j4MLn S141 44,02
Error in line 1: A957 A417 79,5
Error in line 14: j4MLn S141 206,0
Error in line 18: kqX4m6S3w A957 99,9
Error in line 16: j4MLn A417 86,5
Error in line 29: QTA0 A69 80,49
Error in line 32: JEkg8 A957 2,4
Error in line 8: A957 A69 11,7
